# color_systems

./: .coveragerc  .gitignore  LICENSE  pyproject.toml  setup.cfg
color_systems/: version.py
color_systems/generators/: __init__.py  cubehelix.py
tests/: test_color_system.py
tests/test_generators/: test_cubehelix.py
