[tool.poetry]
name = "color_system"
version = "0.1.0"
description = "A collection of color systems, palettes, and generators."
authors = ["RCJacH <RCJacH@outlook.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "\b"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
mypy = "^0.770"
tox = "^3.14.5"
wemake-python-styleguide = "^0.14.0"
pre-commit = "^2.2.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^0.6.0"
pytest-randomly = "^3.2.1"
nitpick = "^0.21.4"
autopep8 = "^1.5"
pyformat = "^0.7"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry.plugins."flake8.extension"]
WPS = "wemake_python_styleguide.checker:Checker"

[tool.poetry.plugins."flake8.report"]
wemake = "wemake_python_styleguide.formatter:WemakeFormatter"

